add kafka producer and Assembler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,33 @@
-# H2 Database
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
+# Server configuration
+server.port=8080
+
+# SpringDoc OpenAPI configuration
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.operationsSorter=alpha
+
+springdoc.show-actuator=true
+
+# Database configuration
+spring.datasource.url=jdbc:h2:mem:deliverydb
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.password=password
 
-# Hibernate
-spring.jpa.hibernate.ddl-auto=update
+# H2 Console
 spring.h2.console.enabled=true
-spring.jpa.show-sql=true
-hibernate.transaction.jta.platform=NoJtaPlatform
+spring.h2.console.path=/h2-console
 
+# JPA/Hibernate
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+
+# Cache configuration
+spring.cache.type=simple
+
+#Config Security
+spring.security.user.name=admin
+spring.security.user.password=secret123
+spring.security.user.roles=ADMIN
